feat(controller): update event creation and listing responses