@@ -10,8 +10,8 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.HashMap;
+import java.util.Map;
 
 @RestController
 @RequestMapping("api/v1/events")
@@ -21,27 +21,35 @@ public class EventController {
     private final EventDtoMapper eventDtoMapper;
     private final FindEventUseCase findEventUseCase;
 
-    public EventController(CreateEventUseCase createEventUseCase, EventDtoMapper eventDtoMapper, FindEventUseCase findEventUseCase) {
+
+    public EventController(CreateEventUseCase createEventUseCase, EventDtoMapper eventDtoMapper, FindEventUseCase findEventUseCase){
         this.createEventUseCase = createEventUseCase;
         this.eventDtoMapper = eventDtoMapper;
         this.findEventUseCase = findEventUseCase;
+
     }
 
     @PostMapping("/create")
-    public ResponseEntity<EventDTO> createEvent(@RequestBody EventDTO eventDTO) {
+    public ResponseEntity<Map<String, Object>> createEvent(@RequestBody EventDTO eventDTO) {
         Event newEvent = createEventUseCase.execute(eventDtoMapper.mapToEntity(eventDTO));
         var eventDtoFinal = eventDtoMapper.mapToDto(newEvent);
-        return ResponseEntity.status(HttpStatus.CREATED).body(eventDtoFinal);
+        Map<String, Object> eventCreateResponse = new HashMap<>();
+        eventCreateResponse.put("Message: ", "The event was created successfully");
+        eventCreateResponse.put("Event data", eventDtoFinal);
+        return ResponseEntity.status(HttpStatus.CREATED).body(eventCreateResponse);
 
     }
 
     @GetMapping("/list")
-    public List<EventDTO> listEvent (){
-        return findEventUseCase.execute()
+    public ResponseEntity<Map<String, Object>> listEvents (){
+       var eventList =  findEventUseCase.execute()
                 .stream()
                 .map(eventDtoMapper::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
 
+       Map<String, Object> eventListResponse = new HashMap<>();
+       eventListResponse.put("Events: ", eventList);
+       return ResponseEntity.ok(eventListResponse);
 
     }
 }
